--- a/cmake/dliteCodeGen.bat.in
+++ b/cmake/dliteCodeGen.bat.in
@@ -4,7 +4,7 @@ setlocal
 
 set DLITE_USE_BUILD_ROOT=YES
 set DLITE_ROOT=@DLITE_ROOT@
-set PATH=@e_dlite_PATH_WINDOWS@
+set PATH=@e_dlite_PATH_WINDOWS@;%PATH%
 set PYTHONPATH=@e_dlite_PATH_WINDOWS@
 set DLITE_STORAGE_PLUGIN_DIRS=@e_dlite_STORAGE_PLUGINS_WINDOWS@
 set DLITE_MAPPING_PLUGIN_DIRS=@e_dlite_MAPPING_PLUGINS_WINDOWS@
