Install Python 3.8 for all Wheels on all OS's

--- a/.github/workflows/ci_build_wheels.yml
+++ b/.github/workflows/ci_build_wheels.yml
@@ -80,7 +80,7 @@ jobs:
       - uses: actions/setup-python@v5
         with:
           python-version: 3.8
-        if: runner.os == 'macOS' && runner.arch == 'ARM64'
+        if: matrix.py_minors == 8
 
       - name: Login to GitHub Container Registry
         if: startsWith(matrix.os, 'ubuntu')
