--- a/.github/workflows/ci_build_wheels.yml
+++ b/.github/workflows/ci_build_wheels.yml
@@ -80,6 +80,7 @@ jobs:
         uses: actions/setup-python@v5
         with:
           python-version: 3.8
+          architecture: ${{ matrix.arch == '' && 'x86' || matrix.arch == 'arm64' && 'arm64' || 'x64' }}
         if: matrix.py_minors == 8
 
       - name: Setup Python 3.11 for running CIBW
