Convert to quoted arguments

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -340,10 +340,10 @@ if(WITH_PYTHON)
       # leading to it needing to be compiled on multiple architectures.
       # The correct generators/ toolkits are not setup to handle this.
       # GitHub macOS runner images tend to have universal binaries with e.g. -arch x86_64;arm64
-      separate_arguments(Python3_LDFLAGS_ARGS UNIX_COMMAND ${Python3_LDFLAGS})
+      separate_arguments(Python3_LDFLAGS_ARGS UNIX_COMMAND "${Python3_LDFLAGS}")
       set(skip_next FALSE)
       set(Python3_LDFLAGS "")
-      foreach(arg ${Python3_LDFLAGS_ARGS})
+      foreach(arg "${Python3_LDFLAGS_ARGS}")
         if(${arg} STREQUAL "-arch")
           set(skip_next TRUE)
         elseif(${skip_next})
@@ -351,11 +351,11 @@ if(WITH_PYTHON)
         elseif(${arg} MATCHES "[ ]+")
           list(APPEND Python3_LDFLAGS "\"${arg}\"")
         else()
-          list(APPEND Python3_LDFLAGS ${arg})
+          list(APPEND Python3_LDFLAGS "${arg}")
         endif()
       endforeach()
-      string(JOIN " " Python3_LDFLAGS ${Python3_LDFLAGS})
-      string(STRIP Python3_LDFLAGS ${Python3_LDFLAGS})
+      string(JOIN " " Python3_LDFLAGS "${Python3_LDFLAGS}")
+      string(STRIP Python3_LDFLAGS "${Python3_LDFLAGS}")
       unset(skip_next)
       unset(Python3_LDFLAGS_ARGS)
     endif()
