Correct variable order

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -355,7 +355,7 @@ if(WITH_PYTHON)
         endif()
       endforeach()
       string(JOIN " " Python3_LDFLAGS ${Python3_LDFLAGS})
-      string(STRIP Python3_LDFLAGS "${Python3_LDFLAGS}")
+      string(STRIP "${Python3_LDFLAGS}" Python3_LDFLAGS)
       unset(skip_next)
       unset(Python3_LDFLAGS_ARGS)
     endif()
