--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -108,7 +108,10 @@ if(CMAKE_C_COMPILER_ID STREQUAL "GNU")
 endif()
 
 # Enable compiler warnings
-if(CMAKE_C_COMPILER_ID MATCHES "^(GNU|Clang|AppleClang)$")
+if(CMAKE_C_COMPILER_ID STREQUAL "GNU" OR
+  CMAKE_C_COMPILER_ID STREQUAL "Clang" OR
+  CMAKE_C_COMPILER_ID STREQUAL "AppleClang"
+)
   enable_c_compiler_flag_if_supported("-Wall")
   enable_c_compiler_flag_if_supported("-Wextra")
   enable_c_compiler_flag_if_supported("-Wpedantic")
@@ -455,8 +458,6 @@ if(WITH_FORTRAN)
   enable_fortran_compiler_flag_if_supported("-Wextra")
   enable_fortran_compiler_flag_if_supported("-Wpedantic")
   enable_fortran_compiler_flag_if_supported("-Werror")
-  # Known "noisy" warning with gfortran
-  enable_fortran_compiler_flag_if_supported("-Wno-maybe-uninitialized")
 endif()
 
 # Unset extra_link_libraries if it is empty
@@ -1001,20 +1002,6 @@ set(CPACK_DEBIAN_PACKAGE_DEPENDS
 set(CPACK_RPM_PACKAGE_LICENSE "${dlite_LICENSE}")
 set(CPACK_RPM_PACKAGE_REQUIRES
   "python3, python3-numpy, redland, raptor2, hdf5")
-
-# TODO: ? macOS Bundle Generator
-# Required
-# set(CPACK_BUNDLE_NAME ${PROJECT_NAME})
-# set(CPACK_BUNDLE_PLIST XXX)
-# set(CPACK_BUNDLE_ICON "${dlite_SOURCE_DIR}/doc/figs/logo-circle.ico")
-# Optional
-# set(CPACK_BUNDLE_STARTUP_COMMAND XXX)
-# For App Store submission only
-# set(CPACK_BUNDLE_APPLE_CERT_APP XXX)
-# set(CPACK_BUNDLE_APPLE_ENTITLEMENTS XXX)
-# set(CPACK_BUNDLE_APPLE_CODESIGN_FILES XXX)
-# set(CPACK_BUNDLE_APPLE_CODESIGN_PARAMETER XXX)
-# set(CPACK_COMMAND_CODESIGN XXX)
 
 # Include CPack after configuring it...
 include(CPack)
