Always install Python 3.8 for arm64 macOS

--- a/.github/workflows/ci_build_wheels.yml
+++ b/.github/workflows/ci_build_wheels.yml
@@ -81,8 +81,8 @@ jobs:
           python-version: "3.${{ contains(matrix.py_minors, ',') && 'x' || matrix.py_minors }}"
           architecture: ${{ matrix.arch == '' && 'x86' || matrix.arch == 'arm64' && 'arm64' || 'x64' }}
 
-      - name: Install Python from python.org
-        if: runner.os == 'macOS' && contains(matrix.py_minors, 8)
+      - name: Install Python 3.8 from python.org
+        if: matrix.os == 'macos-14'
         run: |
           url="https://www.python.org/ftp/python/3.8.10/python-3.8.10-macos11.pkg"
           curl $url -o python-3.8.10-macos11.pkg
