--- a/.github/workflows/ci_build_wheels.yml
+++ b/.github/workflows/ci_build_wheels.yml
@@ -82,7 +82,8 @@ jobs:
           python-version: "3.x"
           architecture: ${{ matrix.arch == '' && 'x86' || matrix.arch == 'arm64' && 'arm64' || 'x64' }}
 
-      - name: Install Python 3.8 from python.org
+      # https://cibuildwheel.pypa.io/en/stable/faq/#macos-building-cpython-38-wheels-on-arm64
+      - name: Install Python3.8 from python.org for macOS compiling
         if: matrix.os == 'macos-14'
         run: |
           url="https://www.python.org/ftp/python/3.8.10/python-3.8.10-macos11.pkg"
