--- a/python/pyproject.toml
+++ b/python/pyproject.toml
@@ -15,6 +15,7 @@ build-verbosity = 1
 [tool.cibuildwheel.macos]
 before-test = "python -m pip install -r {project}/requirements.txt -r {project}/requirements_dev.txt"
 test-command = "python {package}/../bindings/python/tests/test_python_bindings.py"
+repair-wheel-command = "delocate-wheel --require-archs {delocate_archs} -w {dest_dir} -v {wheel} --dylibs-only"
 
 [tool.cibuildwheel.windows]
 before-test = "python -m pip install -r {project}\\requirements.txt -r {project}\\requirements_dev.txt"
