--- a/.github/workflows/ci_tests.yml
+++ b/.github/workflows/ci_tests.yml
@@ -137,7 +137,7 @@ jobs:
             python3 -m pip install --upgrade pip
             python3 -m pip --version
 
-            python3 -m pip install -U setuptools wheel
+            python3 -m pip install -c requirements_dev.txt setuptools wheel
 
             # requirements.txt is omitted as only contains numpy.
             # This needs to be and is installed by pacman.
@@ -152,7 +152,6 @@ jobs:
             python3 --version
             python3 -m pip --version
             python3 -m pip install --upgrade pip
-            python3 -m pip install -U setuptools wheel
             python3 -m pip install -r requirements.txt -r requirements_full.txt -r requirements_dev.txt
           
           elif [[ ${{ matrix.os }} == windows* ]] ;
@@ -167,7 +166,6 @@ jobs:
             python3 -m pip install --upgrade pip
             python3 -m pip --version
 
-            python3 -m pip install -U setuptools wheel
             python3 -m pip install -r requirements.txt -r requirements_full.txt -r requirements_dev.txt
 
           fi
